<resources>
    <string name="app_name">Salao</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">441732602881638</string>

    <string name="user">Usuário</string>
    <string name="senha">Senha</string>
    <string name="register">Cadastrar</string>
    <string name="enter">Entrar</string>
    <string name="forgot_pass">Esqueci a senha</string>
    <string name="fullName">Nome completo</string>
    <string name="email">E-mail</string>
    <string name="showPassword">Mostrar senha</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
</resources>
