<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullName"
        android:id="@+id/registerName" />

    <EditText
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/registerEmail" />

    <EditText
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:inputType="textNoSuggestions"
        android:id="@+id/registerUser" />

    <EditText
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:id="@+id/registerPassword"
        android:inputType="textPassword"/>

    <CheckBox
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showPassword"
        android:id="@+id/showPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_marginRight="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:text="@string/cancel"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okButton"
            android:text="@string/ok"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
</LinearLayout>